--- a/package.json
+++ b/package.json
@@ -4,29 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prebuild": "del-cli dist -f",
-    "build:dev": "webpack --progress --watch",
-    "build:prod": "webpack -p --progress",
-    "server": "webpack-dev-server --content-base dist/",
-    "start": "npm run server -s && npm run build:dev -s"
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production --progress"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "milligram": "^1.3.0",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^8.0.0"
   },
   "devDependencies": {
-    "css-loader": "^0.28.4",
-    "del-cli": "^1.1.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-inline-source-plugin": "0.0.9",
-    "html-webpack-plugin": "^2.29.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
