--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
+    "ftp-deploy": "^2.3.3",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
