--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,6 @@ jobs:
     - name: npm install, build, and deploy
       run: |
         npm ci
-        npm run build --if-present
+        # npm run build --if-present
       env:
         CI: true
