--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "deploy": "node deploy.js"
   },
   "keywords": [],
   "author": "",
