--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+      env:
+        FTP_USER: ${{ secrets.FTP_USER }}
     - name: npm install, build, and deploy
       run: |
         npm ci
