--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "milligram": "^1.3.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "siema": "^1.5.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
