--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production --progress",
-    "deploy": "node deploy.js"
+    "build": "webpack --mode production --progress"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +19,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
     "file-loader": "^5.0.2",
-    "ftp-deploy": "^2.3.6",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
